--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+### CONFIGS ###
+Config.plist
+
 ### macOS ###
 *.DS_Store
 .AppleDouble
