--- a/UniWeather/Info.plist
+++ b/UniWeather/Info.plist
@@ -4,5 +4,11 @@
 <dict>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Для отображения погоды в виджетах</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Для показа местной погоды</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Для обновления виджета в фоне</string>
 </dict>
 </plist>
