--- a/UniWeather/Info.plist
+++ b/UniWeather/Info.plist
@@ -4,6 +4,15 @@
 <dict>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.kuhockovolec.UniWeather.refresh</string>
+	</array>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Для отображения погоды в виджетах</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
