--- a/UniWeather/UniWeather.entitlements
+++ b/UniWeather/UniWeather.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.kuhockovolec.UniWeather1</string>
+		<string>group.com.kuhockovolec.UniWeather</string>
 	</array>
 </dict>
 </plist>
